# ethos-u85-workflow

./: .gitignore  CMakeLists.txt  MyMNISTModel_int8.tflite  README.md  Untitled.ipynb  dataset training.ipynb  final_mnist.tflite  mnist_cnn.tflite  model_data.cpp  model_final_mnist_vela.h  model_v1_small.tflite  model_v2_medium.tflite  requirements.txt  syscalls.c
ml-embedded-evaluation-kit/: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  MlekModule.cmake  README.md  build_default.py  set_up_default_resources.py
ml-embedded-evaluation-kit/.ci/: build_and_test.yml  buildah_build_and_push.yml
ml-embedded-evaluation-kit/.devcontainer/: devcontainer.json
ml-embedded-evaluation-kit/dependencies/avh/Overview/: README.md
ml-embedded-evaluation-kit/dependencies/avh/board/: README.md
ml-embedded-evaluation-kit/dependencies/avh/example/: README.md
ml-embedded-evaluation-kit/dependencies/avh/interface/: README.md
ml-embedded-evaluation-kit/dependencies/cmsis-dsp/Ne10/: CMSIS_NE10_fft.h
ml-embedded-evaluation-kit/dependencies/cmsis-dsp/Scripts/: genNeonTwiddleCoefs.py
ml-embedded-evaluation-kit/dependencies/core-platform/: README.md  requirements.txt
ml-embedded-evaluation-kit/dependencies/core-platform/applications/baremetal/: CMakeLists.txt  main.cpp
ml-embedded-evaluation-kit/dependencies/core-platform/cmake/: helpers.cmake
ml-embedded-evaluation-kit/dependencies/core-platform/scripts/: generate_binaries.py  run_ctest.py
ml-embedded-evaluation-kit/dependencies/cortex-dfp/: ARM.Cortex_DFP.pdsc
ml-embedded-evaluation-kit/dependencies/cortex-dfp/SVD/: STARMC3.svd
ml-embedded-evaluation-kit/docs/: documentation.md  quick_start.md
ml-embedded-evaluation-kit/docs/sections/: building.md  cmake_presets.md  coding_guidelines.md  contributing.md  customizing.md  deployment.md  faq.md  memory_considerations.md  mlek_as_a_dependency.md  testing_benchmarking.md  timing_adapters.md  troubleshooting.md
ml-embedded-evaluation-kit/docs/use_cases/: ad.md  asr.md  img_class.md  inference_runner.md  kws.md  kws_asr.md  noise_reduction.md  object_detection.md  visual_wake_word.md
ml-embedded-evaluation-kit/model_conditioning_examples/: README.md  post_training_quantization.py  quantization_aware_training.py  weight_clustering.py  weight_pruning.py
ml-embedded-evaluation-kit/resources/: use_case_resources.json
ml-embedded-evaluation-kit/resources/asr/labels/: librispeech_sp.pieces
ml-embedded-evaluation-kit/resources/asr/models/: conformer_pte_gen.py  requirements.txt
ml-embedded-evaluation-kit/resources/cmsis-packs/: ARM.ml-embedded-eval-kit-uc-api.25.12.0.pack  ARM.ml-embedded-eval-kit-uc-api.25.12.1.pack  ARM.ml-embedded-eval-kit-uc-api.pdsc
ml-embedded-evaluation-kit/resources/img_class/models/: deit_tiny.py  requirements.txt
ml-embedded-evaluation-kit/scripts/cmake/: cmsis-dsp.cmake  executorch.cmake  source_gen_utils.cmake  tensorflow_lite_micro.cmake  util_functions.cmake
ml-embedded-evaluation-kit/scripts/cmake/cmsis-pack-gen/: CMakeLists.txt  use-case-api.yml
ml-embedded-evaluation-kit/scripts/cmake/configuration_options/: cmsis_opts.cmake  common_opts.cmake  fvp_opts.cmake  npu_opts.cmake  options-preset.json
ml-embedded-evaluation-kit/scripts/cmake/timing_adapter/: ta_config_u65_high_end.cmake  ta_config_u85_sys_dram_high.cmake  ta_config_u85_sys_dram_low.cmake
ml-embedded-evaluation-kit/scripts/cmake/toolchains/: bare-metal-armclang.cmake  bare-metal-gcc.cmake  bare-metal-llvm.cmake  toolchain-preset.json
ml-embedded-evaluation-kit/scripts/mps4/sse-320/: images.txt
ml-embedded-evaluation-kit/scripts/py/: MANIFEST.in  dependency_urls.json  download_dependencies.py  pyproject.toml  requirements-common.txt  requirements-dev.txt  requirements-executorch.txt  requirements.txt
ml-embedded-evaluation-kit/scripts/py/mlek_tools/: __init__.py  orchestrate.py
ml-embedded-evaluation-kit/source/app/: CMakeLists.txt
ml-embedded-evaluation-kit/source/app/main/: Main.cc  UseCaseCommonUtils.cc
ml-embedded-evaluation-kit/source/app/profiler/: CMakeLists.txt  Profiler.cc
ml-embedded-evaluation-kit/source/app/use_case/: usecase-preset.json
ml-embedded-evaluation-kit/source/hal/: CMakeLists.txt
ml-embedded-evaluation-kit/source/hal/include/: hal.h
ml-embedded-evaluation-kit/source/hal/source/: hal.c  hal_test.c
ml-embedded-evaluation-kit/source/lib/: CMakeLists.txt  config.cmake  export.cmake
ml-embedded-evaluation-kit/tests/common/: AppContextTest.cc  ImageUtilsTests.cc  PlatformMathTests.cpp  ProfilerTests.cc  SlidingWindowTests.cc
ml-embedded-evaluation-kit/tests/fwk/tflm/: ClassifierTests.cc  TflmTensorTests.cc
ml-embedded-evaluation-kit/tests/use_case/ad/: InferenceTestAD.cc  MelSpecTests.cc
ml-embedded-evaluation-kit/tests/use_case/asr/: AsrFeaturesTests.cc  MfccTests.cc  OutputDecodeTests.cc
ml-embedded-evaluation-kit/tests/use_case/inference_runner/: InferenceTestInferenceRunner.cc
ml-embedded-evaluation-kit/tests/use_case/kws/: InferenceTestMicroNetKws.cc  KWSHandlerTest.cc  KwsClassifierTests.cc  MfccTests.cc
ml-embedded-evaluation-kit/tests/use_case/kws_asr/: InferenceTestMicroNetKws.cc  InferenceTestWav2Letter.cc  InitModels.cc  MfccTests.cc  Wav2LetterPostprocessingTest.cc  Wav2LetterPreprocessingTest.cc
ml-embedded-evaluation-kit/tests/use_case/noise_reduction/: InferenceTestRNNoise.cc  RNNNoiseUCTests.cc  RNNoiseModelTests.cc  RNNoiseProcessingTests.cpp
ml-embedded-evaluation-kit/tests/use_case/object_detection/: InferenceTestYoloFastest.cc  ObjectDetectionUCTest.cc
ml-embedded-evaluation-kit/tests/use_case/vww/: InferenceVisualWakeWordModelTests.cc  VisualWakeWordUCTests.cc
mnist_e8_project/: CMakeLists.txt  J9App.cbuild-idx.yml  J9App.cbuild-pack.yml  J9App.cpp  J9App.csolution.yml  model_data.cpp  model_data.h  syscalls.c
mnist_e8_project/M55_HP/: J9App.Debug+AE822FA0E5597LS0.cbuild.yml  J9App.cproject.yml
mnist_e8_project/M55_HP/RTE/_Debug_AE822FA0E5597LS0/: RTE_Components.h
(+360 files in other folders)
